--- a/Classes/BusinessAnalyticProgramming/index.html
+++ b/Classes/BusinessAnalyticProgramming/index.html
@@ -1,7 +1,9 @@
 
-```python
 
-```python
+
+
+<blockquote>
+
 import pandas as pd
 import numpy as np
 
@@ -20,7 +22,7 @@ dfc2.loc[19,'Party']='Independent'
 dfc2.loc[dfc2['Party'].isnull(),'Party']='Republican'
 
 cand_dict = dict(zip(dfc2.cand_nm, dfc2.Party))
-```
+</blockquote>
 
 #cand_dict = {'Clinton, Hillary Rodham':'Democrat', 
 #           'Sanders, Bernard':'Democrat', 
