--- a/Classes/ML/ML.html
+++ b/Classes/ML/ML.html
@@ -5,3 +5,4 @@ layout: post
 
 <a href="/Classes/ML/2.6_ml_notes.pdf"><font style="color:blue;">2.6_note_G distriubtuion&bayes</font></a>
 
+<a href="https://www.datalearner.com/blog/1051505532393058"><font style="color:blue;">bayes/beta distribution简介与e.g.</font></a>
