--- a/Classes/ML/ML.html
+++ b/Classes/ML/ML.html
@@ -6,4 +6,7 @@ layout: post
 <a href="https://www.zhihu.com/question/34305879"><font style="color:blue;">Linear Discriminant Analysis（LDA）介绍</font></a><br>
 <a href="/Classes/ML/2.6_ml_notes.pdf"><font style="color:blue;">2.6_note_convex/concave/Jesen inequition</font></a><br>
 
-<a href="https://www.datalearner.com/blog/1051505532393058"><font style="color:blue;">bayes/beta distribution简介与e.g.</font></a>
+<a href="https://www.datalearner.com/blog/1051505532393058"><font style="color:blue;">bayes/beta distribution简介与e.g.</font></a><br>
+<a href="https://zhuanlan.zhihu.com/p/28788715?group_id=884456256394383360"><font style="color:blue;">Latent Dirichlet Allocation（LDA）简介</font></a>
+
+
