--- a/Classes/ML/ML.html
+++ b/Classes/ML/ML.html
@@ -8,5 +8,6 @@ layout: post
 <a href="/Classes/ML/2.6_ml_notes.pdf"><font style="color:blue;">2.6_note_convex/concave/Jesen inequition</font></a><br>
 
 <a href="https://www.datalearner.com/blog/1051505532393058"><font style="color:blue;">bayes/beta distribution简介与e.g.</font></a><br>
+<a href="/Classes/ML/0211-linear.html"><font style="color:blue;">0211-linear</font></a><br>
 
 
