--- a/Classes/related-knowledge/index.html
+++ b/Classes/related-knowledge/index.html
@@ -2,5 +2,5 @@
 layout: post
 title: Classes
 ---
-<a href="https://en.wikipedia.org/wiki/A/B_testing">A/B_testing</a><br>
+<a href="https://en.wikipedia.org/wiki/A/B_testing">A/B_testing</a>
 <a href="https://vwo.com/ab-testing/">  (example)</a><br>
