--- a/ML and DM projects/useful-function(R).html
+++ b/ML and DM projects/useful-function(R).html
@@ -1,8 +1,8 @@
 ---
 layout: post
 ---
-1. draw all variables in one time:<br>
-
+1. draw all variables in one time:
+https://drsimonj.svbtle.com/quick-plot-of-all-variables <br>
 <blockquote>
 gas %>%
   keep(is.numeric) %>% <br/>
