--- a/ML and DM projects/useful-function(R).html
+++ b/ML and DM projects/useful-function(R).html
@@ -1,8 +1,7 @@
 ---
 layout: post
 ---
-1. draw all variables in one time:
-https://drsimonj.svbtle.com/quick-plot-of-all-variables <br>
+1. <a href="https://drsimonj.svbtle.com/quick-plot-of-all-variables">draw all variables in one time: </a><br>
 <blockquote>
 gas %>%<br/>
   keep(is.numeric) %>% <br/>
