--- a/ML and DM projects/useful-function(R).html
+++ b/ML and DM projects/useful-function(R).html
@@ -6,7 +6,7 @@ layout: post
 gas %>%<br/>
   keep(is.numeric) %>% <br/>
   gather() %>% <br/>
-  ggplot(aes(value)) +facet_wrap(~ key, scales = "free") +geom_histogram()
+  ggplot(aes(value)) +facet_wrap(~ key, scales = "free") +geom_histogram()<br><br>
 </blockquote>
 
 <blockquote>
