--- a/ML and DM projects/useful-function(R).html
+++ b/ML and DM projects/useful-function(R).html
@@ -18,3 +18,10 @@ d %>%<br/>
        facet_wrap(~ key, scales = "free") +   # In separate panels<br/>
        geom_density()                         # as density<br/>
 </blockquote>
+
+
+
+R base function as.Date handles this type of conversion nicely. The trick is that you have to provide the origin, which in Excel is December 30, 1899.
+```{r}
+as.Date(data, origin = "1899-12-30")
+'''
