--- a/ML and DM projects/useful-function(R).html
+++ b/ML and DM projects/useful-function(R).html
@@ -21,11 +21,11 @@ d %>%<br/>
 
 FOR date, from csv to R:<br/>
 R base function as.Date handles this type of conversion nicely. The trick is that you have to provide the origin, which in Excel is December 30, 1899.<br>
-</blockquote>
+<blockquote>
 as.Date(data, origin = "1899-12-30")
 </blockquote>
 
-</blockquote>
+<blockquote>
 if the data is daily data, date is not stable, then use <br/>
 cpi$DATE=as.Date(cpi$DATE,origin = "1899-12-30")<br/>
 cpi$Date<-as.POSIXct(cpi$Date,tz = "UTC")<br/>
