--- a/ML and DM projects/useful-function(R).html
+++ b/ML and DM projects/useful-function(R).html
@@ -25,12 +25,14 @@ R base function as.Date handles this type of conversion nicely. The trick is tha
 as.Date(data, origin = "1899-12-30")
 </blockquote>
 
-<blockquote>
+
 if the data is daily data, date is not stable, then use <br/>
+<blockquote>
 cpi$DATE=as.Date(cpi$DATE,origin = "1899-12-30")<br/>
 cpi$Date<-as.POSIXct(cpi$Date,tz = "UTC")<br/>
-
+</blockquote>
 if data is monthly or annually or seasonal, then create the ts date by using<br/>
+<blockquote>
 ts(data, frequency = 12, start = c(2014, 1))<br/>
 </blockquote>                                  <br/>
                                   
