--- a/ML and DM projects/useful-function(python).html
+++ b/ML and DM projects/useful-function(python).html
@@ -3,6 +3,11 @@ layout: post
 ---
 1.<a href="https://python-graph-gallery.com/125-small-multiples-for-line-chart/">multiple chart</a>
 
-<blockquote>
-
+<blockquote>-** must use tensorflow.python.keras.models to import the tensorflow keras
+from tensorflow.python.keras.models import Sequential
+from tensorflow.python.keras.layers import LSTM,Dense
+from tensorflow.python.keras.models import load_model
+from tensorflow.python.keras.layers import InputLayer, Input
+from tensorflow.python.keras.layers import Reshape, MaxPooling2D
+from tensorflow.python.keras.layers import Conv2D, Dense, Flatten
 </blockquote>
