--- a/ML and DM projects/useful-function(python).html
+++ b/ML and DM projects/useful-function(python).html
@@ -2,8 +2,8 @@
 layout: post
 ---
 1.<a href="https://python-graph-gallery.com/125-small-multiples-for-line-chart/">multiple chart</a>
-
-<blockquote>-** must use tensorflow.python.keras.models to import the tensorflow keras
+- ** must use tensorflow.python.keras.models to import the tensorflow keras
+<blockquote>
 from tensorflow.python.keras.models import Sequential
 from tensorflow.python.keras.layers import LSTM,Dense
 from tensorflow.python.keras.models import load_model
