--- a/ML and DM projects/useful-function(python).html
+++ b/ML and DM projects/useful-function(python).html
@@ -1,13 +1,18 @@
 ---
 layout: post
 ---
-1.<a href="https://python-graph-gallery.com/125-small-multiples-for-line-chart/">multiple chart</a>
+1.<a href="https://python-graph-gallery.com/125-small-multiples-for-line-chart/">multiple chart</a><br>
 - ** must use tensorflow.python.keras.models to import the tensorflow keras
 <blockquote>
-from tensorflow.python.keras.models import Sequential
-from tensorflow.python.keras.layers import LSTM,Dense
-from tensorflow.python.keras.models import load_model
-from tensorflow.python.keras.layers import InputLayer, Input
-from tensorflow.python.keras.layers import Reshape, MaxPooling2D
-from tensorflow.python.keras.layers import Conv2D, Dense, Flatten
+from tensorflow.python.keras.models import Sequential<br>
+from tensorflow.python.keras.layers import LSTM,Dense<br>
+from tensorflow.python.keras.models import load_model<br>
+from tensorflow.python.keras.layers import InputLayer, Input<br>
+from tensorflow.python.keras.layers import Reshape, MaxPooling2D<br>
+from tensorflow.python.keras.layers import Conv2D, Dense, Flatten<br>
+  
+  
+#add the ‘，’ after the name, can show the full name, unless only show the first letter. <br>
+plt.legend(labels=(df.columns[i],),loc=0)
+
 </blockquote>
