--- a/ML and DM projects/useful-function(python).html
+++ b/ML and DM projects/useful-function(python).html
@@ -19,5 +19,23 @@ plt.legend(labels=(df.columns[i],),loc=0) <br> <br> <br>
 df2.loc[df2['CHG'] >=0,"h"] = 1 <br>
 df2.loc[df2['CHG']<=0,"h"] = 0 <br>
 df2
+</blockquote><br>
 
+
+<blockquote>
+#删除表中全部为NaN的行<br>
+df.dropna(axis=0,how='all')  <br>
+  
+# 删除表中全部为NaN的列<br>
+df.dropna(axis=1,how='all') 
+
+</blockquote><br>
+
+
+<blockquote>
+删除表中含有任何NaN的行<br>
+df.dropna(axis=0,how='any')<br>
+  
+删除表中含有任何NaN的列<br>
+df.dropna(axis=1,how='any')
 </blockquote>
