--- a/ML and DM projects/useful-function(python).html
+++ b/ML and DM projects/useful-function(python).html
@@ -10,6 +10,7 @@ from tensorflow.python.keras.models import load_model<br>
 from tensorflow.python.keras.layers import InputLayer, Input<br>
 from tensorflow.python.keras.layers import Reshape, MaxPooling2D<br>
 from tensorflow.python.keras.layers import Conv2D, Dense, Flatten<br> <br>
+from tensorflow.python.keras.utils import to_categorical <br> <br>
   
   
 #add the ‘，’ after the name, can show the full name, unless only show the first letter. <br>
